nodejs/express/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-express
spec:
  replicas: 2
  selector:
    matchLabels:
      app: node-express
  template:
    metadata:
      labels:
        app: node-express
    spec:
      containers:
        - name: node-express
          image: juniyadi/docker-example:node-express
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
