nodejs/express/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: node-express
spec:
  type: NodePort
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: node-express
