nodejs/express/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-express-ingress
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    cert-manager.io/cluster-issuer: 'letsencrypt'
spec:
  tls:
    - hosts:
        - express.k8s.juniyadi.id
      secretName: letsencrypt
  rules:
    - host: express.k8s.juniyadi.id
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: node-express
                port:
                  number: 3000
